error.log
   Compiling monet v0.1.2 (/Users/dawei/way/monet/crates/monet)
error[E0106]: missing lifetime specifier
   --> crates/monet/src/routing/router.rs:147:19
    |
147 |         H: Handler<T, S>,
    |                   ^ expected named lifetime parameter
    |
    = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'a` lifetime
    |
147 |         H: for<'a> Handler<'a, T, S>,
    |            +++++++         +++
help: consider making the bound lifetime-generic with a new `'a` lifetime
    |
147 |         for<'a> H: Handler<'a, T, S>,
    |         +++++++            +++
help: consider introducing a named lifetime parameter
    |
145 ~     pub fn fallback<'a, H, T>(mut self, handler: H) -> Self
146 |     where
147 ~         H: Handler<'a, T, S>,
    |

error[E0106]: missing lifetime specifier
   --> crates/monet/src/routing/router.rs:242:11
    |
242 |     Route(Route),
    |           ^^^^^ expected named lifetime parameter
    |
help: consider introducing a named lifetime parameter
    |
240 ~ pub enum Endpoint<'a, S> {
241 |     MethodRouter(MethodRouter<S>),
242 ~     Route(Route<'a>),
    |

error[E0106]: missing lifetime specifier
   --> crates/monet/src/routing/router.rs:327:18
    |
327 |     Default(Route<E>),
    |                  ^ expected named lifetime parameter
    |
help: consider introducing a named lifetime parameter
    |
326 ~ pub(crate) enum Fallback<'a, S, E = Infallible> {
327 ~     Default(Route<'a, E>),
    |

error[E0106]: missing lifetime specifier
   --> crates/monet/src/routing/router.rs:328:18
    |
328 |     Service(Route<E>),
    |                  ^ expected named lifetime parameter
    |
help: consider introducing a named lifetime parameter
    |
326 ~ pub(crate) enum Fallback<'a, S, E = Infallible> {
327 |     Default(Route<E>),
328 ~     Service(Route<'a, E>),
    |

error[E0106]: missing lifetime specifier
   --> crates/monet/src/routing/router.rs:329:32
    |
329 |     BoxedHandler(BoxedIntoRoute<S, E>),
    |                                ^ expected named lifetime parameter
    |
help: consider introducing a named lifetime parameter
    |
326 ~ pub(crate) enum Fallback<'a, S, E = Infallible> {
327 |     Default(Route<E>),
328 |     Service(Route<E>),
329 ~     BoxedHandler(BoxedIntoRoute<'a, S, E>),
    |

error[E0726]: implicit elided lifetime not allowed here
  --> crates/monet/src/routing/router_tower_impl.rs:34:22
   |
34 | impl<B> TowerService<HttpRequest<B>> for Router<()>
   |                      ^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
34 | impl<B> TowerService<HttpRequest<'_, B>> for Router<()>
   |                                  +++

error[E0106]: missing lifetime specifier
  --> crates/monet/src/routing/router_tower_impl.rs:39:21
   |
39 |     type Response = HttpResponse;
   |                     ^^^^^^^^^^^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
39 |     type Response<'a> = HttpResponse<'a>;
   |                  ++++               ++++

error[E0106]: missing lifetime specifier
  --> crates/monet/src/routing/router_tower_impl.rs:43:30
   |
43 |     type Future = RouteFuture<Infallible>;
   |                              ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
43 |     type Future<'a> = RouteFuture<'a, Infallible>;
   |                ++++               +++

error[E0726]: implicit elided lifetime not allowed here
  --> crates/monet/src/routing/router_tower_impl.rs:61:22
   |
61 | impl<B> TowerService<HttpRequest<B>> for NotFound
   |                      ^^^^^^^^^^^^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
61 | impl<B> TowerService<HttpRequest<'_, B>> for NotFound
   |                                  +++

error[E0106]: missing lifetime specifier
  --> crates/monet/src/routing/router_tower_impl.rs:65:21
   |
65 |     type Response = HttpResponse;
   |                     ^^^^^^^^^^^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
65 |     type Response<'a> = HttpResponse<'a>;
   |                  ++++               ++++

error[E0106]: missing lifetime specifier
  --> crates/monet/src/routing/router_tower_impl.rs:67:45
   |
67 |     type Future = std::future::Ready<Result<HttpResponse, Self::Error>>;
   |                                             ^^^^^^^^^^^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
67 |     type Future<'a> = std::future::Ready<Result<HttpResponse<'a>, Self::Error>>;
   |                ++++                                         ++++

error[E0106]: missing lifetime specifier
  --> crates/monet/src/routing/method_router.rs:85:25
   |
85 |         T: TowerService<HttpRequest, Error = E> + Clone + 'static,
   |                         ^^^^^^^^^^^ expected named lifetime parameter
   |
help: consider making the bound lifetime-generic with a new `'a` lifetime
   |
85 |         T: for<'a> TowerService<HttpRequest<'a>, Error = E> + Clone + 'static,
   |            +++++++                         ++++
help: consider making the bound lifetime-generic with a new `'a` lifetime
   |
85 |         for<'a> T: TowerService<HttpRequest<'a>, Error = E> + Clone + 'static,
   |         +++++++                            ++++
help: consider introducing a named lifetime parameter
   |
83 ~     pub fn get_service<'a, T>(mut self, svc: T) -> Self
84 |     where
85 ~         T: TowerService<HttpRequest<'a>, Error = E> + Clone + 'static,
   |

error[E0106]: missing lifetime specifier
   --> crates/monet/src/routing/method_router.rs:228:19
    |
228 |         H: Handler<X, S>,
    |                   ^ expected named lifetime parameter
    |
help: consider making the bound lifetime-generic with a new `'a` lifetime
    |
228 |         H: for<'a> Handler<'a, X, S>,
    |            +++++++         +++
help: consider making the bound lifetime-generic with a new `'a` lifetime
    |
228 |         for<'a> H: Handler<'a, X, S>,
    |         +++++++            +++
help: consider introducing a named lifetime parameter
    |
226 ~     pub fn get<'a, H, X>(mut self, handler: H) -> Self
227 |     where
228 ~         H: Handler<'a, X, S>,
    |

error[E0106]: missing lifetime specifier
   --> crates/monet/src/routing/method_router.rs:261:32
    |
261 |     BoxedHandler(BoxedIntoRoute<S, E>),
    |                                ^ expected named lifetime parameter
    |
help: consider introducing a named lifetime parameter
    |
260 ~ enum MethodEndpoint<'a, S, E> {
261 ~     BoxedHandler(BoxedIntoRoute<'a, S, E>),
    |

error[E0106]: missing lifetime specifier
   --> crates/monet/src/routing/method_router.rs:262:16
    |
262 |     Route(Route<E>),
    |                ^ expected named lifetime parameter
    |
help: consider introducing a named lifetime parameter
    |
260 ~ enum MethodEndpoint<'a, S, E> {
261 |     BoxedHandler(BoxedIntoRoute<S, E>),
262 ~     Route(Route<'a, E>),
    |

error[E0308]: mismatched types
  --> crates/monet/src/handler_tower_impl.rs:28:19
   |
28 |     type Future = IntoServiceFuture<H::Future>;
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected enum `Result<Response<Body<'static>>, _>`
              found enum `Result<Response<Body<'a>>, _>`
note: the lifetime `'a` as defined here...
  --> crates/monet/src/handler_tower_impl.rs:17:6
   |
17 | impl<'a, H, X, S, B> TowerService<HttpRequest<'a, B>> for HandlerService<'a, H, X, S>
   |      ^^
   = note: ...does not necessarily outlive the static lifetime

error[E0605]: non-primitive cast: `fn(_) -> Result<_, _> {Result::<_, _>::Ok}` as `for<'a> fn(Response<Body<'a>>) -> Result<Response<Body<'a>>, Infallible>`
  --> crates/monet/src/handler_tower_impl.rs:41:33
   |
41 |         let future = future.map(Ok as _);
   |                                 ^^^^^^^ invalid cast

error: lifetime may not live long enough
   --> crates/monet/src/routing/route.rs:150:24
    |
138 | impl<'a, S> BoxedIntoRoute<'a, S, Infallible>
    |      -- lifetime `'a` defined here
...
150 |             let lbcs = LocalBoxCloneService::new(resp_map);
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

Some errors have detailed explanations: E0106, E0308, E0605, E0726.
For more information about an error, try `rustc --explain E0106`.
error: could not compile `monet` (lib) due to 18 previous errors
